Problem 2 updates commit

--- a/p8105_hw3_sef2183.md
+++ b/p8105_hw3_sef2183.md
@@ -41,6 +41,19 @@ data("instacart")
 
 # Problem 2
 
+Below, the accelerometer data from `accel_data.csv` is read in and the
+variable names are cleaned using `clean_names()`. Then, `pivot_longer()`
+is used to manipulate the dataset from wide to long format. To do this,
+all variable names beginning with “activity” (`activity_1` to
+`activity_1440`) were transformed into 2 different variables: one
+denoting the minute of the day and one denoting the activity measure.The
+variable names were changed to `minute` and the prefix “activity\_” was
+removed so that the variable values contained only the minute number,
+and the values were changed to `activity_count`, indicating the amount
+of activity read by the accelerometer during each 1 minute window.
+Finally, a new variable called `weekday_weekend` was created to indicate
+whether the day of the week is a weekday or a weekend day.
+
 ``` r
 accel_df = 
   read_csv("data/accel_data.csv") %>%
@@ -63,13 +76,23 @@ accel_df =
 
 ## Dataset description
 
--   The variables in the resulting dataset include:
+-   The variables in the resulting dataset include: `week`, `day_id`
+    (day count number), `day` (day of the week), `minute`,
+    `activity_count`, and `weekday_weekend` (either weekday or weekend)
 -   The resulting dataset contains 50400 rows/observations and 6
     columns/variables.
 
 ## Table of total activity over each day
 
-TOTAL FOR DAY ID OR DAY?
+Below, the tidied accelerometer dataset was aggregated across minutes
+using `group_by()` to group the data together by the `DAY_ID` variable.
+Then a `total_activity` variable was created by summing the
+`activity_count` variables for each 1 minute window throughout the day
+to indicate the total activity read by the accelerometer during each day
+of the study. Finally, only the relevant variables `day_id`, `week`,
+`day`, and `total_activity` were selected from the dataset using
+`select()` and a table was created to show the daily totals for each of
+the 35 days of the study using `kable()` from the `knitr` package.
 
 ``` r
 accel_df %>%
@@ -118,23 +141,59 @@ accel_df %>%
 |     34 |    5 | Tuesday   |      367824.00 |
 |     35 |    5 | Wednesday |      445366.00 |
 
--   THE TRENDS APPARENT ARE:
+-   It’s very difficult to see any trends that are apparent from this
+    table. I immediately noticed that the last 2 Saturdays in the study
+    (days 24 and 31) had a much lower total activity count than the
+    other days in the study. However, the previous Saturdays in the
+    study had relatively similar total activity counts to the rest of
+    the days in the study, so this isn’t a trend that can be seen
+    through the entire dataset. Visualization may be required to see any
+    trends, if they are apparent in this dataset.
 
 ## Plot of the 24-hour activity time courses for each day
 
+Below, a single panel-plot was created using `ggplot()` to show the
+24-hour activity time courses for each day, using color to indicate the
+day of the week. `group_by()` was used to group the data by day of the
+week, then `ggplot()` was called to create a scatterplot with `minute`
+on the x axis and `activity_count` (data read from the accelerometer in
+1 minute intervals) on the y axis.
+
 ``` r
 accel_df %>%
-  group_by(day_id, week, day) %>%
-  summarize(
-    total_activity = sum(activity_count)) %>% 
-  ggplot(aes(x = day, y = total_activity, color = day)) + 
-    geom_point() + geom_line() + 
-    theme(legend.position = "bottom")
+  group_by(day) %>%
+  ggplot(aes(x = minute, y = activity_count, color = day)) + geom_point() + 
+  theme(legend.position = "bottom")
 ```
 
 ![](p8105_hw3_sef2183_files/figure-gfm/problem%202%20plot-1.png)<!-- -->
 
--   PATTERNS AND CONCLUSIONS
+This plot shows the individual’s activity course throughout the entire
+1440 minutes within a 24-hour period for each day of the week throughout
+the 5 weeks if the study observation period. However, since there are so
+many minutes in a 24-hour period, the plot is messy and the values on
+the x axis are difficult to read. Even with this difficulty, it is still
+possible to see some patterns and trends in the data:
+
+-   For all days of the week, there are lower activity counts that can
+    be observed mid morning, at around 9:30am-10:30am (estimated,
+    because exact minutes can not be read on the x axis)
+-   On Tuesdays, the individual doesn’t appear to spend any minutes with
+    activity counts over 3750, indicating that the individual seems to
+    have less/lighter activity on Tuesdays.
+-   On Sundays, the individual has most of their high activity counts
+    later in the day compared to the other days of the week at around
+    5:00pm (estimated)
+-   On Thursdays, the individual has most of their high activity counts
+    around midday at around 1:00pm (estimated)
+-   On Fridays, the individual has most of their high activity counts
+    earlier in the day at around 5:00am (estimated), with some high
+    activity in the early afternoon as well at around 3:00pm (estimated)
+-   On Mondays and Wednesdays, the individual has most of their high
+    activity counts earlier in the day at around 5:00am (estimated).
+-   On Saturdays, the individual has most of their high activity counts
+    earlier in the day at around 5:00am (estimated) and a some at late
+    at night as well, at around 12:00am (estimated)
 
 # Problem 3
 
@@ -168,6 +227,24 @@ ny_noaa_df =
     tmin = tmin / 10,
     tmax = tmax / 10) # Ensure observations for temperature, precipitation, and snowfall are given in reasonable units?
 ```
+
+NOTE ABOUT THE SNOW VARIABLE FROM DISCUSSION BOARD
+
+As for the final plot, you should filter values based on the original
+definition of snowfall (i.e., using the original units). To that end,
+you might want to consider retaining both the original variable snow as
+well as your proposal for a variable with a more sensical unit. As long
+as you’re clear about how you label values and units in your
+visualizations, you should be good!
+
+Hello, Haochen!
+
+You should make a single plot for part (i) and a single plot for part
+(ii). Then, you should combine these two plots side by side into a
+single-panel exhibit; you can find a refresher on how to do that
+hereLinks to an external site.. For the first plot, you are correct that
+“vs” implies tmax should be on the vertical axis and that tmin should be
+on the horizontal axis.
 
 ## Dataset questions:
 
@@ -484,6 +561,24 @@ snowfall is \_\_\_\_\_\_\_\_\_. The reason is because
 
 Make a two-panel plot
 
+You should compute the average for max temperature for each station
+separately and then plot the two plots side by side.
+
+For this problem, you want to find the average of tmax for every unique
+combination of station ID, year, and month (perhaps consider grouping by
+these three variables to obtain the desired result). Then, you will want
+to construct two plots - one for January and one for July - that show
+the average maximum temperature (vertical axis) against years
+(horizontal axis) for every station.
+
+As you have all intuited, a scatterplot is way too busy to visualize all
+of these data. To give you an idea of a better option, consider
+something like a spaghetti plotLinks to an external site.. As Cathy also
+points out, it is going to be best to suppress the legend since there
+are so many possible labels for station ID. That’s okay, though, as we
+just want to see if there are any meaningful trends that can be teased
+out via the spaghetti plot.
+
 ``` r
 jan_tmax_p = ny_noaa_df %>%
   filter(month == "01") %>% 
@@ -506,12 +601,30 @@ jan_tmax_p + jul_tmax_p
 
 ![](p8105_hw3_sef2183_files/figure-gfm/problem%203%20max%20temp%20plots-1.png)<!-- -->
 
+ny_noaa_tidy %\>% filter( month %in% c(“January”,“July”)) %\>%
+group_by(month, year, id) %\>% summarize( tmax_mean = mean(tmax, na.rm =
+TRUE) ) %\>% ggplot(aes(x = year, y = tmax_mean, color = id)) +
+geom_bar(alpha = 0.5) + facet_grid(.\~month)
+
+2)  In your ggplot aesthetic call, you might consider replacing “color =
+    id” with “group = id”, as R could be struggling to come up with many
+    colors if there are a lot of unique stations in the dataset.
+
+<!-- -->
+
+3)  Relatedly, it might be better to use a line plot instead of a bar
+    plot, as there could be too many bars to display things properly.
+    Since our horizontal axis is time, a line plot is reasonable.
+
 -   There \[IS/IS NOT\] an observable interpretable structure
 -   There \[ARE/ARE NOT\] outliers
 
 ## Plot of tmax vs tmin for the full dataset (panel 1) and the distribution of snowfall values greater than 0 and less than 100 separately by year (panel 2)
 
 Make a two-panel plot showing
+
+We want to limit the values of snowfall to the criteria specified and
+then use ggplot to plot the distribution (density plot).
 
 ``` r
 i_p = ny_noaa_df %>%
