--- a/p8105_hw3_sef2183.md
+++ b/p8105_hw3_sef2183.md
@@ -204,15 +204,41 @@ data("ny_noaa")
 
 ## Description of the dataset:
 
--   The size of the dataset is
--   The structure of the dataset is
--   Key variables in the dataset are (description)
--   (indicating the extent to which missing data is an issue)
+-   The size of the dataset is 2,595,176 observations (rows) and
+    variables 7 variables (columns)
+-   The structure of the dataset is in long format, with 1 row for each
+    observation date for each weather station.
+-   Variables in the dataset include: `id` (weather station ID), `date`
+    (observation date), `prcp` (precipitation measured in tenths of a
+    mm), `snow` (snowfall measured in mm), `snwd` (snow depth measured
+    in mm), `tmax` (maximum temperature measured in tenths of degrees
+    C), and `tmin` (minimum temperature measured in tenths of degrees
+    C).
+-   The dataset has quite a bit of missing data, which has the potential
+    to create issues for future analysis:
+    -   There are `sum(is.na(ny_noaa$prcp))` missing observations for
+        `prcp`
+    -   There are `sum(is.na(ny_noaa$snow))` missing observations for
+        `snow`
+    -   There are `sum(is.na(ny_noaa$snwd))` missing observations for
+        `snwd`
+    -   There are `sum(is.na(ny_noaa$tmax))` missing observations for
+        `tmax`
+    -   There are `sum(is.na(ny_noaa$tmin))` missing observations for
+        `tmin`
 
-id: Weather station ID date: Date of observation prcp: Precipitation
-(tenths of mm) snow: Snowfall (mm) snwd: Snow depth (mm) tmax: Maximum
-temperature (tenths of degrees C) tmin: Minimum temperature (tenths of
-degrees C)
+``` r
+sum(is.na(ny_noaa$prcp)) 
+## [1] 145838
+sum(is.na(ny_noaa$snow))
+## [1] 381221
+sum(is.na(ny_noaa$snwd))
+## [1] 591786
+sum(is.na(ny_noaa$tmax))
+## [1] 1134358
+sum(is.na(ny_noaa$tmin))
+## [1] 1134420
+```
 
 ``` r
 ny_noaa_df = 
