--- a/p8105_hw3_sef2183.Rmd
+++ b/p8105_hw3_sef2183.Rmd
@@ -107,7 +107,7 @@ data("ny_noaa")
 * The size of the dataset is 2,595,176 observations (rows) and variables 7 variables (columns)
 * The structure of the dataset is in long format, with 1 row for each observation date for each weather station.
 * Variables in the dataset include: `id` (weather station ID), `date` (observation date), `prcp` (precipitation measured in tenths of a mm), `snow` (snowfall measured in mm), `snwd` (snow depth measured in mm), `tmax` (maximum temperature measured in tenths of degrees C), and `tmin` (minimum temperature measured in tenths of degrees C). 
-* The dataset has quite a bit of missing data, which has the potential to create issues for future analysis:
+* The dataset contains extensive missing data, since each weather station may collect only a subset of the weather variables:
 
 ```{r problem 3 missing data}
 sum(is.na(ny_noaa$prcp)) 
@@ -115,6 +115,8 @@ sum(is.na(ny_noaa$snow))
 sum(is.na(ny_noaa$snwd))
 sum(is.na(ny_noaa$tmax))
 sum(is.na(ny_noaa$tmin))
+
+# MAYBE USE PULL INSTEAD HERE?
 ```
 
 * There are 145,838 missing observations for `prcp`
@@ -123,7 +125,7 @@ sum(is.na(ny_noaa$tmin))
 * There are 1,134,358 missing observations for `tmax`
 * There are 1,134,420 missing observations for `tmin`
 
-It's worth noting that the `tmax` and `tmin` variables have the most missing observations, and `prcp` has the least number of missing observations. Therefore, missing data will be more of a problem for analyses involving `tmax` and `tmin`, but less of a problem for analyses with the other variables in the dataset.
+It's worth noting that the `tmax` and `tmin` variables have the most missing observations, and `prcp` has the least number of missing observations. This alligns with the dataset description which stated that about one half of the stations report precipitation only. Therefore, missing data will be more of a problem for analyses involving `tmax` and `tmin`, but less of a problem for analyses with the other variables in the dataset.
 
 Below, a dataframe is created from the `ny_noaa` dataset  and the variable names are cleaned using the `clean_names()` function from the `janitor` package. Then, separate variables for `year`, `month`, and `day` were created by separating the `date` variable using `separate()` and indicating "-" as the delimiter. Then, `mutate()` was used on `tmax` and `tmin` first to convert them to numeric variables using `as.numeric()`, and then to convert `tmax`, `tmin`, and `prcp` to reasonable units. In the description of the original `ny_noaa` dataset, `tmax`, `tmin`, and `prcp` were reported in tenths of mm and tenths of degrees Celsius, which is not very easy to interpret. Therefore, the values were divided by 10 so the variables were in  reasonable units. 
 
@@ -141,70 +143,84 @@ ny_noaa_df =
     tmax = tmax / 10) 
 ```
 
+MAYBE NEED TO REMOVE VALUES OF LESS THAN 0 AT THE END OF THIS STEP
+
 ## Dataset questions:
 ### Most common values of snowfall
 #### Distribution histogram
 
+Below is a distribution histogram of values for the snowfall variable `snow` using `ggplot()`, with values for `snow` on the x axis and a count on the y axis:
 ```{r problem 3 snowfall plot}
 ggplot(ny_noaa_df, aes(x = snow)) + geom_histogram()
 ```
 
 #### Table
+
+Below is a table denoting the counts for each value of the snowfall variable `snow` using `count()` and the `kable()` function from the `knitr` package to create the table: 
 ```{r problem 3 snowfall count}
 ny_noaa_df %>%
   count(snow, name = "count") %>% 
   knitr::kable()
 ```
 
-From both the distribution histogram of snowfall and the table with the counts for each value of snowfall, the most commonly observed value of snowfall is _________. The reason is because ___________.
+From both the distribution histogram of snowfall and the table with the counts for each value of snowfall, the most commonly observed value of snowfall is 0, with a count of 2,008,508. The second most common value is NA with a count of 381,221. The reason that NA is a commonly observed value for `snow` is because about one half of the stations report precipitation only, and do not report data on the other weather variables including `snow`. This results in many missing or "NA" observations for `snow`. Additionally, the reason that 0 is the most commonly observed value for `snow` is because the dataset contains data from New York state weather stations only. While it does snow sometimes during the winter in New York state, it is not snowing for the majority of the year. This results in many values of 0 for the amount of snowfall for dates during the spring, summer, and fall months. 
+
+****NOTE: Running this analysis revealed that there is 1 record with a value of -13 for `snow`. This indicates that the dataset may require additional cleaning, as this value is outside of the reasonable range because the amount of snowfall cannot be less than 0. CHECK ON THIS ABOVE
 
 ## Plot of average max temperature in January and in July in each station across years
-Make a two-panel plot
 
-You should compute the average for max temperature for each station separately and then plot the two plots side by side. 
+Below, a two-panel scatterplot depicting the average maximum temperature in the months of January and in July in each station across years are side by side. To create the plot, separate objects were created for the January and July plots using the `filter()` function for month values of "01" or "07". Additionally, `id`, `year`, and `month` were grouped together using `group_by()` in order to calculate the mean of `tmax` for every unique combination of those 3 variables. A new `mean_tmax` variable was created using `mean()` within the `mutate()` function in combination with the grouping stated previously to calculate the mean maximum temperature for each station separately across each year. Then, `ggplot()` was used to plot points with `year` on the x axis and `mean_max` on the y axis. `theme()` was used to rotate the text on the x axis to make it easier to read and the legend was surpressed because the 700 stations made it too large. Finally, a short title was added to each plot using `ggtitle()` and then the two plots were arranged side by side.
 
-For this problem, you want to find the average of tmax for every unique combination of station ID, year, and month (perhaps consider grouping by these three variables to obtain the desired result). Then, you will want to construct two plots - one for January and one for July - that show the average maximum temperature (vertical axis) against years (horizontal axis) for every station.
-
-As you have all intuited, a scatterplot is way too busy to visualize all of these data. To give you an idea of a better option, consider something like a spaghetti plotLinks to an external site.. As Cathy also points out, it is going to be best to suppress the legend since there are so many possible labels for station ID. That's okay, though, as we just want to see if there are any meaningful trends that can be teased out via the spaghetti plot.
-
-```{r problem 3 max temp plots}
-jan_tmax_p = ny_noaa_df %>%
+```{r problem 3 max temp geom point plots}
+jan_tmax_point = 
+  ny_noaa_df %>%
+  group_by(id, year, month) %>% 
   filter(month == "01") %>% 
-  group_by(year) %>% 
   mutate(mean_tmax = mean(tmax, na.rm = TRUE)) %>% 
-  ggplot(aes(x = year, y = mean_tmax)) + 
-  theme(axis.text.x = element_text(angle = 90,hjust = 1)) + geom_point() +
-  ggtitle("Average max temperature in January in each station across years")
+  ggplot(aes(x = year, y = mean_tmax, group = id, color = id)) + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) + geom_point(show.legend = FALSE) +
+  ggtitle("Avg max temp in January")
 
-jul_tmax_p = ny_noaa_df %>%
+jul_tmax_point = 
+  ny_noaa_df %>%
+  group_by(id, year, month) %>% 
   filter(month == "07") %>% 
-  group_by(year) %>% 
   mutate(mean_tmax = mean(tmax, na.rm = TRUE)) %>% 
-  ggplot(aes(x = year, y = mean_tmax)) + 
-  theme(axis.text.x = element_text(angle = 90,hjust = 1)) + geom_point() +
-  ggtitle("Average max temperature in July in each station across years")
+  ggplot(aes(x = year, y = mean_tmax, group = id, color = id)) + 
+  theme(axis.text.x = element_text(angle = 90,hjust = 1)) + geom_point(show.legend = FALSE) +
+  ggtitle("Avg max temp in July")
 
-jan_tmax_p + jul_tmax_p
+jan_tmax_point + jul_tmax_point
 ```
 
-ny_noaa_tidy %>%
-    filter(
-    month %in% c("January","July")) %>% 
-  group_by(month, year, id) %>% 
-  summarize(
-    tmax_mean = mean(tmax, na.rm = TRUE)
-  ) %>% 
-  ggplot(aes(x = year, y = tmax_mean, color = id)) +
-  geom_bar(alpha = 0.5) +
-  facet_grid(.~month)
-  
-2) In your ggplot aesthetic call, you might consider replacing "color = id" with "group = id", as R could be struggling to come up with many colors if there are a lot of unique stations in the dataset.
-(3) Relatedly, it might be better to use a line plot instead of a bar plot, as there could be too many bars to display things properly. Since our horizontal axis is time, a line plot is reasonable.
-* There [IS/IS NOT] an observable interpretable structure
-* There [ARE/ARE NOT] outliers
+Additionally, the same data is plotted below except using `geom_line` in order to visualize the trends a bit easier:
+
+```{r problem 3 max temp geom line plots}
+jan_tmax_line = 
+  ny_noaa_df %>%
+  group_by(id, year, month) %>% 
+  filter(month == "01") %>% 
+  mutate(mean_tmax = mean(tmax, na.rm = TRUE)) %>% 
+  ggplot(aes(x = year, y = mean_tmax, group = id, color = id)) + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) + geom_line(show.legend = FALSE) + ylab("mean maximum temperature") + ggtitle("Avg max temp in January")
+
+jul_tmax_line = 
+  ny_noaa_df %>%
+  group_by(id, year, month) %>% 
+  filter(month == "07") %>% 
+  mutate(mean_tmax = mean(tmax, na.rm = TRUE)) %>% 
+  ggplot(aes(x = year, y = mean_tmax, group = id, color = id)) + 
+  theme(axis.text.x = element_text(angle = 90,hjust = 1)) + geom_line(show.legend = FALSE) + ylab("mean maximum temperature") + ggtitle("Avg max temp in July")
+
+jan_tmax_line + jul_tmax_line
+```
+
+* There is somewhat of an observable structure in the data. The mean maximum temperature for both the months of January and July oscillate higher and lower, with high peaks occurring roughly every 4 years. Most of the data follows the same general oscillating pattern, however there are some outliers
+* There are outliers in the data for both months. In January, there was a weather station that recorded a very low mean average temperature of about -16 degrees C around 1982. In July, there was also a weather station that recorded a low mean average temperature of about 19 degrees C around 1984, an even temperature of about 14 degrees C around 1987, and outliers of around about 18 and 19 degrees C around 2003 and 2006.
 
 ## Plot of tmax vs tmin for the full dataset (panel 1) and the distribution of snowfall values greater than 0 and less than 100 separately by year (panel 2)
-Make a two-panel plot showing 
+
+Below, a two-panel plot depicting
 
 We want to limit the values of snowfall to the criteria specified and then use ggplot to plot the distribution (density plot). 
 
