--- a/p8105_hw3_sef2183.md
+++ b/p8105_hw3_sef2183.md
@@ -85,7 +85,7 @@ accel_df =
 ## Table of total activity over each day
 
 Below, the tidied accelerometer dataset was aggregated across minutes
-using `group_by()` to group the data together by the `DAY_ID` variable.
+using `group_by()` to group the data together by the `day_id` variable.
 Then a `total_activity` variable was created by summing the
 `activity_count` variables for each 1 minute window throughout the day
 to indicate the total activity read by the accelerometer during each day
@@ -214,18 +214,8 @@ data("ny_noaa")
     in mm), `tmax` (maximum temperature measured in tenths of degrees
     C), and `tmin` (minimum temperature measured in tenths of degrees
     C).
--   The dataset has quite a bit of missing data, which has the potential
-    to create issues for future analysis:
-    -   There are `sum(is.na(ny_noaa$prcp))` missing observations for
-        `prcp`
-    -   There are `sum(is.na(ny_noaa$snow))` missing observations for
-        `snow`
-    -   There are `sum(is.na(ny_noaa$snwd))` missing observations for
-        `snwd`
-    -   There are `sum(is.na(ny_noaa$tmax))` missing observations for
-        `tmax`
-    -   There are `sum(is.na(ny_noaa$tmin))` missing observations for
-        `tmin`
+-   The dataset contains extensive missing data, since each weather
+    station may collect only a subset of the weather variables:
 
 ``` r
 sum(is.na(ny_noaa$prcp)) 
@@ -238,7 +228,35 @@ sum(is.na(ny_noaa$tmax))
 ## [1] 1134358
 sum(is.na(ny_noaa$tmin))
 ## [1] 1134420
+
+# MAYBE USE PULL INSTEAD HERE?
 ```
+
+-   There are 145,838 missing observations for `prcp`
+-   There are 381,221 missing observations for `snow`
+-   There are 591,786 missing observations for `snwd`
+-   There are 1,134,358 missing observations for `tmax`
+-   There are 1,134,420 missing observations for `tmin`
+
+It’s worth noting that the `tmax` and `tmin` variables have the most
+missing observations, and `prcp` has the least number of missing
+observations. This alligns with the dataset description which stated
+that about one half of the stations report precipitation only.
+Therefore, missing data will be more of a problem for analyses involving
+`tmax` and `tmin`, but less of a problem for analyses with the other
+variables in the dataset.
+
+Below, a dataframe is created from the `ny_noaa` dataset and the
+variable names are cleaned using the `clean_names()` function from the
+`janitor` package. Then, separate variables for `year`, `month`, and
+`day` were created by separating the `date` variable using `separate()`
+and indicating “-” as the delimiter. Then, `mutate()` was used on `tmax`
+and `tmin` first to convert them to numeric variables using
+`as.numeric()`, and then to convert `tmax`, `tmin`, and `prcp` to
+reasonable units. In the description of the original `ny_noaa` dataset,
+`tmax`, `tmin`, and `prcp` were reported in tenths of mm and tenths of
+degrees Celsius, which is not very easy to interpret. Therefore, the
+values were divided by 10 so the variables were in reasonable units.
 
 ``` r
 ny_noaa_df = 
@@ -251,32 +269,20 @@ ny_noaa_df =
   mutate(
     prcp = prcp / 10, 
     tmin = tmin / 10,
-    tmax = tmax / 10) # Ensure observations for temperature, precipitation, and snowfall are given in reasonable units?
+    tmax = tmax / 10) 
 ```
 
-NOTE ABOUT THE SNOW VARIABLE FROM DISCUSSION BOARD
-
-As for the final plot, you should filter values based on the original
-definition of snowfall (i.e., using the original units). To that end,
-you might want to consider retaining both the original variable snow as
-well as your proposal for a variable with a more sensical unit. As long
-as you’re clear about how you label values and units in your
-visualizations, you should be good!
-
-Hello, Haochen!
-
-You should make a single plot for part (i) and a single plot for part
-(ii). Then, you should combine these two plots side by side into a
-single-panel exhibit; you can find a refresher on how to do that
-hereLinks to an external site.. For the first plot, you are correct that
-“vs” implies tmax should be on the vertical axis and that tmin should be
-on the horizontal axis.
+MAYBE NEED TO REMOVE VALUES OF LESS THAN 0 AT THE END OF THIS STEP
 
 ## Dataset questions:
 
 ### Most common values of snowfall
 
 #### Distribution histogram
+
+Below is a distribution histogram of values for the snowfall variable
+`snow` using `ggplot()`, with values for `snow` on the x axis and a
+count on the y axis:
 
 ``` r
 ggplot(ny_noaa_df, aes(x = snow)) + geom_histogram()
@@ -286,6 +292,10 @@ ggplot(ny_noaa_df, aes(x = snow)) + geom_histogram()
 ![](p8105_hw3_sef2183_files/figure-gfm/problem%203%20snowfall%20plot-1.png)<!-- -->
 
 #### Table
+
+Below is a table denoting the counts for each value of the snowfall
+variable `snow` using `count()` and the `kable()` function from the
+`knitr` package to create the table:
 
 ``` r
 ny_noaa_df %>%
@@ -580,74 +590,112 @@ ny_noaa_df %>%
 
 From both the distribution histogram of snowfall and the table with the
 counts for each value of snowfall, the most commonly observed value of
-snowfall is \_\_\_\_\_\_\_\_\_. The reason is because
-\_\_\_\_\_\_\_\_\_\_\_.
+snowfall is 0, with a count of 2,008,508. The second most common value
+is NA with a count of 381,221. The reason that NA is a commonly observed
+value for `snow` is because about one half of the stations report
+precipitation only, and do not report data on the other weather
+variables including `snow`. This results in many missing or “NA”
+observations for `snow`. Additionally, the reason that 0 is the most
+commonly observed value for `snow` is because the dataset contains data
+from New York state weather stations only. While it does snow sometimes
+during the winter in New York state, it is not snowing for the majority
+of the year. This results in many values of 0 for the amount of snowfall
+for dates during the spring, summer, and fall months.
+
+\*\*\*\*NOTE: Running this analysis revealed that there is 1 record with
+a value of -13 for `snow`. This indicates that the dataset may require
+additional cleaning, as this value is outside of the reasonable range
+because the amount of snowfall cannot be less than 0. CHECK ON THIS
+ABOVE
 
 ## Plot of average max temperature in January and in July in each station across years
 
-Make a two-panel plot
-
-You should compute the average for max temperature for each station
-separately and then plot the two plots side by side.
-
-For this problem, you want to find the average of tmax for every unique
-combination of station ID, year, and month (perhaps consider grouping by
-these three variables to obtain the desired result). Then, you will want
-to construct two plots - one for January and one for July - that show
-the average maximum temperature (vertical axis) against years
-(horizontal axis) for every station.
-
-As you have all intuited, a scatterplot is way too busy to visualize all
-of these data. To give you an idea of a better option, consider
-something like a spaghetti plotLinks to an external site.. As Cathy also
-points out, it is going to be best to suppress the legend since there
-are so many possible labels for station ID. That’s okay, though, as we
-just want to see if there are any meaningful trends that can be teased
-out via the spaghetti plot.
+Below, a two-panel scatterplot depicting the average maximum temperature
+in the months of January and in July in each station across years are
+side by side. To create the plot, separate objects were created for the
+January and July plots using the `filter()` function for month values of
+“01” or “07”. Additionally, `id`, `year`, and `month` were grouped
+together using `group_by()` in order to calculate the mean of `tmax` for
+every unique combination of those 3 variables. A new `mean_tmax`
+variable was created using `mean()` within the `mutate()` function in
+combination with the grouping stated previously to calculate the mean
+maximum temperature for each station separately across each year. Then,
+`ggplot()` was used to plot points with `year` on the x axis and
+`mean_max` on the y axis. `theme()` was used to rotate the text on the x
+axis to make it easier to read and the legend was surpressed because the
+700 stations made it too large. Finally, a short title was added to each
+plot using `ggtitle()` and then the two plots were arranged side by
+side.
 
 ``` r
-jan_tmax_p = ny_noaa_df %>%
+jan_tmax_point = 
+  ny_noaa_df %>%
+  group_by(id, year, month) %>% 
   filter(month == "01") %>% 
-  group_by(year) %>% 
   mutate(mean_tmax = mean(tmax, na.rm = TRUE)) %>% 
-  ggplot(aes(x = year, y = mean_tmax)) + 
-  theme(axis.text.x = element_text(angle = 90,hjust = 1)) + geom_point() +
-  ggtitle("Average max temperature in January in each station across years")
+  ggplot(aes(x = year, y = mean_tmax, group = id, color = id)) + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) + geom_point(show.legend = FALSE) +
+  ggtitle("Avg max temp in January")
 
-jul_tmax_p = ny_noaa_df %>%
+jul_tmax_point = 
+  ny_noaa_df %>%
+  group_by(id, year, month) %>% 
   filter(month == "07") %>% 
-  group_by(year) %>% 
   mutate(mean_tmax = mean(tmax, na.rm = TRUE)) %>% 
-  ggplot(aes(x = year, y = mean_tmax)) + 
-  theme(axis.text.x = element_text(angle = 90,hjust = 1)) + geom_point() +
-  ggtitle("Average max temperature in July in each station across years")
+  ggplot(aes(x = year, y = mean_tmax, group = id, color = id)) + 
+  theme(axis.text.x = element_text(angle = 90,hjust = 1)) + geom_point(show.legend = FALSE) +
+  ggtitle("Avg max temp in July")
 
-jan_tmax_p + jul_tmax_p
+jan_tmax_point + jul_tmax_point
+## Warning: Removed 90613 rows containing missing values (geom_point).
+## Warning: Removed 94457 rows containing missing values (geom_point).
 ```
 
-![](p8105_hw3_sef2183_files/figure-gfm/problem%203%20max%20temp%20plots-1.png)<!-- -->
+![](p8105_hw3_sef2183_files/figure-gfm/problem%203%20max%20temp%20geom%20point%20plots-1.png)<!-- -->
 
-ny_noaa_tidy %\>% filter( month %in% c(“January”,“July”)) %\>%
-group_by(month, year, id) %\>% summarize( tmax_mean = mean(tmax, na.rm =
-TRUE) ) %\>% ggplot(aes(x = year, y = tmax_mean, color = id)) +
-geom_bar(alpha = 0.5) + facet_grid(.\~month)
+Additionally, the same data is plotted below except using `geom_line` in
+order to visualize the trends a bit easier:
 
-2)  In your ggplot aesthetic call, you might consider replacing “color =
-    id” with “group = id”, as R could be struggling to come up with many
-    colors if there are a lot of unique stations in the dataset.
+``` r
+jan_tmax_line = 
+  ny_noaa_df %>%
+  group_by(id, year, month) %>% 
+  filter(month == "01") %>% 
+  mutate(mean_tmax = mean(tmax, na.rm = TRUE)) %>% 
+  ggplot(aes(x = year, y = mean_tmax, group = id, color = id)) + 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) + geom_line(show.legend = FALSE) + ylab("mean maximum temperature") + ggtitle("Avg max temp in January")
 
-<!-- -->
+jul_tmax_line = 
+  ny_noaa_df %>%
+  group_by(id, year, month) %>% 
+  filter(month == "07") %>% 
+  mutate(mean_tmax = mean(tmax, na.rm = TRUE)) %>% 
+  ggplot(aes(x = year, y = mean_tmax, group = id, color = id)) + 
+  theme(axis.text.x = element_text(angle = 90,hjust = 1)) + geom_line(show.legend = FALSE) + ylab("mean maximum temperature") + ggtitle("Avg max temp in July")
 
-3)  Relatedly, it might be better to use a line plot instead of a bar
-    plot, as there could be too many bars to display things properly.
-    Since our horizontal axis is time, a line plot is reasonable.
+jan_tmax_line + jul_tmax_line
+## Warning: Removed 90055 row(s) containing missing values (geom_path).
+## Warning: Removed 93837 row(s) containing missing values (geom_path).
+```
 
--   There \[IS/IS NOT\] an observable interpretable structure
--   There \[ARE/ARE NOT\] outliers
+![](p8105_hw3_sef2183_files/figure-gfm/problem%203%20max%20temp%20geom%20line%20plots-1.png)<!-- -->
+
+-   There is somewhat of an observable structure in the data. The mean
+    maximum temperature for both the months of January and July
+    oscillate higher and lower, with high peaks occurring roughly every
+    4 years. Most of the data follows the same general oscillating
+    pattern, however there are some outliers
+-   There are outliers in the data for both months. In January, there
+    was a weather station that recorded a very low mean average
+    temperature of about -16 degrees C around 1982. In July, there was
+    also a weather station that recorded a low mean average temperature
+    of about 19 degrees C around 1984, an even temperature of about 14
+    degrees C around 1987, and outliers of around about 18 and 19
+    degrees C around 2003 and 2006.
 
 ## Plot of tmax vs tmin for the full dataset (panel 1) and the distribution of snowfall values greater than 0 and less than 100 separately by year (panel 2)
 
-Make a two-panel plot showing
+Below, a two-panel plot depicting
 
 We want to limit the values of snowfall to the criteria specified and
 then use ggplot to plot the distribution (density plot).
@@ -671,3 +719,21 @@ i_p + ii_p
 ```
 
 ![](p8105_hw3_sef2183_files/figure-gfm/problem%203%20tmax%20vs%20tmin%20and%20snowfall%20plots-1.png)<!-- -->
+
+NOTE ABOUT THE SNOW VARIABLE FROM DISCUSSION BOARD
+
+As for the final plot, you should filter values based on the original
+definition of snowfall (i.e., using the original units). To that end,
+you might want to consider retaining both the original variable snow as
+well as your proposal for a variable with a more sensical unit. As long
+as you’re clear about how you label values and units in your
+visualizations, you should be good!
+
+Hello, Haochen!
+
+You should make a single plot for part (i) and a single plot for part
+(ii). Then, you should combine these two plots side by side into a
+single-panel exhibit; you can find a refresher on how to do that
+hereLinks to an external site.. For the first plot, you are correct that
+“vs” implies tmax should be on the vertical axis and that tmin should be
+on the horizontal axis.
