Problem 3 updates commit

--- a/p8105_hw3_sef2183.md
+++ b/p8105_hw3_sef2183.md
@@ -663,7 +663,7 @@ jan_tmax_line =
   filter(month == "01") %>% 
   mutate(mean_tmax = mean(tmax, na.rm = TRUE)) %>% 
   ggplot(aes(x = year, y = mean_tmax, group = id, color = id)) + 
-  theme(axis.text.x = element_text(angle = 90, hjust = 1)) + geom_line(show.legend = FALSE) + ylab("mean maximum temperature") + ggtitle("Avg max temp in January")
+  theme(axis.text.x = element_text(angle = 90, hjust = 1)) + geom_line(show.legend = FALSE) + ylab("mean maximum temperature (C)") + ggtitle("Avg max temp in January")
 
 jul_tmax_line = 
   ny_noaa_df %>%
@@ -671,7 +671,7 @@ jul_tmax_line =
   filter(month == "07") %>% 
   mutate(mean_tmax = mean(tmax, na.rm = TRUE)) %>% 
   ggplot(aes(x = year, y = mean_tmax, group = id, color = id)) + 
-  theme(axis.text.x = element_text(angle = 90,hjust = 1)) + geom_line(show.legend = FALSE) + ylab("mean maximum temperature") + ggtitle("Avg max temp in July")
+  theme(axis.text.x = element_text(angle = 90,hjust = 1)) + geom_line(show.legend = FALSE) + ylab("mean maximum temperature (C)") + ggtitle("Avg max temp in July")
 
 jan_tmax_line + jul_tmax_line
 ## Warning: Removed 90055 row(s) containing missing values (geom_path).
@@ -684,56 +684,45 @@ jan_tmax_line + jul_tmax_line
     maximum temperature for both the months of January and July
     oscillate higher and lower, with high peaks occurring roughly every
     4 years. Most of the data follows the same general oscillating
-    pattern, however there are some outliers
+    pattern, however there are some outliers.
 -   There are outliers in the data for both months. In January, there
     was a weather station that recorded a very low mean average
-    temperature of about -16 degrees C around 1982. In July, there was
-    also a weather station that recorded a low mean average temperature
-    of about 19 degrees C around 1984, an even temperature of about 14
-    degrees C around 1987, and outliers of around about 18 and 19
-    degrees C around 2003 and 2006.
+    temperature of about -16 degrees C in 1982. In July, there was also
+    a weather station that recorded a low mean average temperature of
+    about 19 degrees C in 1984, an even temperature of about 14 degrees
+    C around 1988, and outliers of about 18 and 19 degrees C in 2004 and
+    2007.
 
 ## Plot of tmax vs tmin for the full dataset (panel 1) and the distribution of snowfall values greater than 0 and less than 100 separately by year (panel 2)
 
-Below, a two-panel plot depicting
-
-We want to limit the values of snowfall to the criteria specified and
-then use ggplot to plot the distribution (density plot).
+Below, a two-panel plot depicting the minimum temperature vs. the
+maximum temperature for the full dataset as well as the distribution of
+snowfall values greater than 0 and less than 100 are displayed side by
+side. For the first plot, an object was created and `ggplot()` was used
+to plot the maximum temperatures against the minimum temperatures in the
+entire dataset. Rather than a scatterplot, a hexagonal heatmap was
+created using `geom_hex()` to display the density coloring of the data
+points. For the second plot, the dataset was filtered to include only
+extreme values of snowfall less than 0 and greater than 100 using
+`filter()`, and grouped by year using `group_by()`. `ggplot()` was used
+to create a distribution (density) plot using `geom_violin()`. Finally,
+the two panels were plotted side by side.
 
 ``` r
 i_p = ny_noaa_df %>%
-  filter(month == "01") %>% 
   ggplot(aes(x = tmin, y = tmax)) +  
-  theme(legend.position = "bottom") + geom_hex() +
-  ggtitle("Max temp vs min temperature")
+  theme(legend.position = "bottom") + geom_hex() + xlab("minimum temperature (C)") + ylab("maximum temperature (C)") + 
+  ggtitle("Max temp vs. min temp")
 
 ii_p = ny_noaa_df %>%
   filter(snow < 0 | snow > 100) %>% 
   group_by(year) %>% 
   ggplot(aes(x = year, y = snow)) + 
-  theme(axis.text.x = element_text(angle = 90,hjust = 1)) + geom_point() +
-  ggtitle("Distribution of extreme snowfall values by year")
+  theme(axis.text.x = element_text(angle = 90,hjust = 1)) + geom_violin() + ylab("snowfall (mm)") +
+  ggtitle("Extreme snowfall by year")
 
 i_p + ii_p
-## Warning: Removed 93189 rows containing non-finite values (stat_binhex).
+## Warning: Removed 1136276 rows containing non-finite values (stat_binhex).
 ```
 
 ![](p8105_hw3_sef2183_files/figure-gfm/problem%203%20tmax%20vs%20tmin%20and%20snowfall%20plots-1.png)<!-- -->
-
-NOTE ABOUT THE SNOW VARIABLE FROM DISCUSSION BOARD
-
-As for the final plot, you should filter values based on the original
-definition of snowfall (i.e., using the original units). To that end,
-you might want to consider retaining both the original variable snow as
-well as your proposal for a variable with a more sensical unit. As long
-as you’re clear about how you label values and units in your
-visualizations, you should be good!
-
-Hello, Haochen!
-
-You should make a single plot for part (i) and a single plot for part
-(ii). Then, you should combine these two plots side by side into a
-single-panel exhibit; you can find a refresher on how to do that
-hereLinks to an external site.. For the first plot, you are correct that
-“vs” implies tmax should be on the vertical axis and that tmin should be
-on the horizontal axis.
